New user instance variables added! Responses and requests fixed for user!